--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div id="brand">
+            <div class="row">
+              <h1 class="col-md-10">Restaurant & Lounge</h1>
+                <div class="col-md-2">
+                    <div class="row align-items-center" onclick="orderDetail()">
+                      <img class="col-6" src="./media/carro.png">
+                      <p class="col-6" id="cart"></p>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="row" id="banner">
+            <img src="./media/banner.png">
+          </div>
+          <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" >Restaurant & Lounge</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" onclick="renderCategory('Burguers')">Burguers</a>
+                    <a class="nav-link" onclick="renderCategory('Burguers')">Burguers</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" onclick="renderCategory('Tacos')">Tacos</a>
@@ -33,12 +46,6 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" onclick="renderCategory('Drinks and Sides')">Drinks and Sides</a>
-                  </li>
-                  <li class="nav-item">
-                    <div class="row">
-                        <i class="col fa fa-shopping-cart" aria-hidden="true"></i>
-                        <p class="col" id="cart"></p>
-                    </div>
                   </li>
                 </ul>
               </div>
