--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -25,7 +28,7 @@
           <div class="row" id="banner">
             <img src="./media/banner.png">
           </div>
-          <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <nav class="navbar navbar-expand-md navbar-dark" id="navbar">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,6 +59,23 @@
 
               </div>
           </main>
+          <footer class="row">
+              <p class="col-12 text-center">Contact us: +57 3102171020 - info@restaurant.com  - @restaurant</p>
+          </footer>
+          <div class="position-absolute top-50 start-50 translate-middle bg-white col-8" id="popover">
+            <div class="d-flex flex-row">
+                <h1>Cancel the order</h1>
+            </div>
+            <div class="d-flex flex-row text-left">
+                Are you sure about cancelling the order?
+            </div>
+            <div class="d-flex flex-row-reverse">
+                <button class="confirm" onclick="cancelOrder()">Yes, I want to cancel the order</button>
+            </div>
+            <div class="d-flex flex-row-reverse">
+                <button class="cancel" onclick="hidePopover()">No, I want to continue adding products</button>
+            </div>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="main.js"></script>
     </body>
