--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
           <div id="brand">
-            <div class="row">
-              <h1 class="col-md-10">Restaurant & Lounge</h1>
-                <div class="col-md-2">
-                    <div class="row align-items-center" onclick="orderDetail()">
-                      <img class="col-6" src="./media/carro.png">
-                      <p class="col-6" id="cart"></p>
-                    </div>
-                </div>
+            <div class="container-fluid">
+              <div class="d-flex flex-row">
+                <h1 class="col-md-10 align-self-end ps-3">Restaurant & Lounge</h1>
+                  <div class="col-md-2">
+                      <div class="row align-items-center" onclick="orderDetail()">
+                        <img class="col-6" src="./media/carro.png">
+                        <p class="col-6" id="cart"></p>
+                      </div>
+                  </div>
+              </div>
             </div>
           </div>
           <div class="row" id="banner">
-            <img src="./media/banner.png">
+            <img class="col-12" src="./media/banner.png">
           </div>
           <nav class="navbar navbar-expand-md navbar-dark" id="navbar">
             <div class="container-fluid">
@@ -36,19 +39,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" onclick="renderCategory('Burguers')">Burguers</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Burguers')">Burguers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" onclick="renderCategory('Tacos')">Tacos</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Tacos')">Tacos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" onclick="renderCategory('Salads')">Salads</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Salads')">Salads</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" onclick="renderCategory('Desserts')">Desserts</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Desserts')">Desserts</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" onclick="renderCategory('Drinks and Sides')">Drinks and Sides</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Drinks and Sides')">Drinks and Sides</a>
                   </li>
                 </ul>
               </div>
@@ -63,19 +66,21 @@
               <p class="col-12 text-center">Contact us: +57 3102171020 - info@restaurant.com  - @restaurant</p>
           </footer>
           <div class="position-absolute top-50 start-50 translate-middle bg-white col-8" id="popover">
-            <div class="d-flex flex-row">
-                <h1>Cancel the order</h1>
+            <div class="container-fluid" id="popover-container">
+              <div class="d-flex flex-row title-popover">
+                  <h1>Cancel the order</h1>
+              </div>
+              <div class="d-flex flex-row text-left question">
+                  Are you sure about cancelling the order?
+              </div>
+              <div class="d-flex flex-row-reverse">
+                  <button class="confirm confirm-popover" onclick="cancelOrder()">Yes, I want to cancel the order</button>
+              </div>
+              <div class="d-flex flex-row-reverse">
+                  <button class="cancel cancel-popover" onclick="hidePopover()">No, I want to continue adding products</button>
+              </div>
             </div>
-            <div class="d-flex flex-row text-left">
-                Are you sure about cancelling the order?
-            </div>
-            <div class="d-flex flex-row-reverse">
-                <button class="confirm" onclick="cancelOrder()">Yes, I want to cancel the order</button>
-            </div>
-            <div class="d-flex flex-row-reverse">
-                <button class="cancel" onclick="hidePopover()">No, I want to continue adding products</button>
-            </div>
-        </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="main.js"></script>
     </body>
