--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <div id="brand">
             <div class="container-fluid">
               <div class="d-flex flex-row">
-                <h1 class="col-md-10 align-self-end ps-3">Restaurant & Lounge</h1>
-                  <div class="col-md-2">
-                      <div class="row align-items-center" onclick="orderDetail()">
-                        <img class="col-6" src="./media/carro.png">
+                <h1 class="col-md-10 align-self-end ps-3" id="brand-title">Restaurant & Lounge</h1>
+                  <div class="col-md-2" id="cart-holder">
+                      <div class="row align-items-center" onclick="orderDetail()" id="cart-holder">
+                        <img class="col-6" src="./media/carro.png" id="cart-img">
                         <p class="col-6" id="cart"></p>
                       </div>
                   </div>
@@ -33,25 +33,25 @@
           </div>
           <nav class="navbar navbar-expand-md navbar-dark" id="navbar">
             <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <button class="navbar-toggler position-absolute top-0 end-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="./media/arrow.png">
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active pe-5" onclick="renderCategory('Burguers')">Burguers</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Burguers')" id="cat1">Burguers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active pe-5" onclick="renderCategory('Tacos')">Tacos</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Tacos')" id="cat2">Tacos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active pe-5" onclick="renderCategory('Salads')">Salads</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Salads')" id="cat3">Salads</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active pe-5" onclick="renderCategory('Desserts')">Desserts</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Desserts')" id="cat4">Desserts</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active pe-5" onclick="renderCategory('Drinks and Sides')">Drinks and Sides</a>
+                    <a class="nav-link active pe-5" onclick="renderCategory('Drinks and Sides')" id="cat5">Drinks and Sides</a>
                   </li>
                 </ul>
               </div>
@@ -63,7 +63,7 @@
               </div>
           </main>
           <footer class="row">
-              <p class="col-12 text-center">Contact us: +57 3102171020 - info@restaurant.com  - @restaurant</p>
+              <strong class="col-12 text-center">Contact us: +57 3102171020 - info@restaurant.com  - @restaurant</strong>
           </footer>
           <div class="position-absolute top-50 start-50 translate-middle bg-white col-8" id="popover">
             <div class="container-fluid" id="popover-container">
